crates/qwik-optimizer-oxc/tests/snapshots/example_default_export.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";
import { sibling } from "./sibling";

export default component$(() => {
  return <div onClick$={() => console.log(mongodb, sibling)}></div>;
});

=== src/routes/_repl/[id]/[[...slug]].js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () =>
  import("./src/routes/_repl/[id]/[[...slug]].tsx_default_component_XXXXXXXXXXXX.js");
const i_XXXXXXXXXXXX = () =>
  import("./src/routes/_repl/[id]/[[...slug]].tsx_default_component_div_q_e_click_XXXXXXXXXXXX.js");
import { sibling } from "./sibling";
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "default_component_XXXXXXXXXXXX"),
);

=== src/routes/_repl/[id]/[[...slug]].tsx_default_component_XXXXXXXXXXXX.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () =>
  import("./src/routes/_repl/[id]/[[...slug]].tsx_default_component_div_q_e_click_XXXXXXXXXXXX.js");
import { _jsxSorted } from "@qwik.dev/core";
import { sibling } from "./sibling";
export const default_component_XXXXXXXXXXXX = () => {
  return /* @__PURE__ */ _jsxSorted(
    "div",
    null,
    {
      "q-e:click": /* @__PURE__ */ qrl(
        i_XXXXXXXXXXXX,
        "default_component_div_q_e_click_XXXXXXXXXXXX",
      ),
    },
    null,
    3,
    "u6_0",
  );
};

/*
{
  "origin": "src/routes/_repl/[id]/[[...slug]].tsx",
  "name": "default_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "src/routes/_repl/[id]/[[...slug]].tsx_default_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "src/routes/_repl/[id]/[[...slug]].tsx_default_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== src/routes/_repl/[id]/[[...slug]].tsx_default_component_div_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { sibling } from "./sibling";
export const default_component_div_q_e_click_XXXXXXXXXXXX = () => console.log(mongodb, sibling);

/*
{
  "origin": "src/routes/_repl/[id]/[[...slug]].tsx",
  "name": "default_component_div_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "src/routes/_repl/[id]/[[...slug]].tsx_default_component_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "src/routes/_repl/[id]/[[...slug]].tsx_default_component_div_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "src/routes/_repl/[id]/[[...slug]].tsx_default_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/
