crates/qwik-optimizer-oxc/tests/snapshots/example_default_export_index.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ } from '@qwik.dev/core';

export default component$(() => {
	return (
		<div onClick$={() => console.log(mongodb)}>
		</div>
	);
});

=== src/components/mongo/index.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
export default /* @__PURE__ */ componentQrl(/* @__PURE__ */ inlinedQrl(() => {
	return <div onClick$={/* @__PURE__ */ inlinedQrl(() => console.log(mongodb), "default_component_div_q_e_click_MfKHh3bA4so")}>
		</div>;
}, "default_component_NUmxKsP6YN0"));
