crates/qwik-optimizer-oxc/tests/snapshots/example_derived_signals_children.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.jsx ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { component$, useStore, mutable } from "@qwik.dev/core";
import { dep } from "./file";
export const TextContent = /* @__PURE__ */ componentQrl(/* @__PURE__ */ inlinedQrl((props) => {
	return /* @__PURE__ */ _jsxSorted(_Fragment, null, null, [/* @__PURE__ */ _jsxSorted("div", null, null, ["data-nu:", props["data-nu"]], 1, "u6_0"), /* @__PURE__ */ _jsxSorted("div", null, null, ["class:", props.class], 1, "u6_1")], 1, "u6_2");
}, "TextContent_component_9KByWIIxV5s"));
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ inlinedQrl(() => {
	const signal = useSignal(0);
	const store = useStore({});
	return /* @__PURE__ */ _jsxSorted(_Fragment, null, null, [
		/* @__PURE__ */ _jsxSorted("div", null, null, "text", 3, "u6_3"),
		/* @__PURE__ */ _jsxSorted("div", null, null, `text`, 3, "u6_4"),
		/* @__PURE__ */ _jsxSorted("div", null, null, 1, 3, "u6_5"),
		/* @__PURE__ */ _jsxSorted("div", null, null, true, 3, "u6_6"),
		/* @__PURE__ */ _jsxSorted("div", null, null, `text${12}`, 3, "u6_7"),
		/* @__PURE__ */ _jsxSorted("div", null, null, typeof `text${12}` === "string" ? 12 : 43, 3, "u6_8"),
		/* @__PURE__ */ _jsxSorted("div", null, null, signal, 3, "u6_9"),
		/* @__PURE__ */ _jsxSorted("div", null, null, _wrapProp(signal), 3, "u6_10"),
		/* @__PURE__ */ _jsxSorted("div", null, null, 12 + signal.value, 3, "u6_11"),
		/* @__PURE__ */ _jsxSorted("div", null, null, store.address.city.name, 3, "u6_12"),
		/* @__PURE__ */ _jsxSorted("div", null, null, store.address.city.name ? "true" : "false", 3, "u6_13"),
		/* @__PURE__ */ _jsxSorted("div", null, null, dep, 3, "u6_14"),
		/* @__PURE__ */ _jsxSorted("div", null, null, dep.thing, 3, "u6_15"),
		/* @__PURE__ */ _jsxSorted("div", null, null, dep.thing + "stuff", 3, "u6_16"),
		/* @__PURE__ */ _jsxSorted("div", null, null, globalThing, 3, "u6_17"),
		/* @__PURE__ */ _jsxSorted("div", null, null, globalThing.thing, 3, "u6_18"),
		/* @__PURE__ */ _jsxSorted("div", null, null, globalThing.thing + "stuff", 3, "u6_19"),
		/* @__PURE__ */ _jsxSorted("div", null, null, signal.value(), 3, "u6_20"),
		/* @__PURE__ */ _jsxSorted("div", null, null, signal.value + unknown(), 3, "u6_21"),
		/* @__PURE__ */ _jsxSorted("div", null, null, mutable(signal), 3, "u6_22"),
		/* @__PURE__ */ _jsxSorted("div", null, null, signal.value + dep, 3, "u6_23")
	], 1, "u6_24");
}, "App_component_XumqEURaLxI"));
