crates/qwik-optimizer-oxc/tests/snapshots/example_derived_signals_cmp.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore, mutable } from "@qwik.dev/core";

import { dep } from "./file";
import { Cmp } from "./cmp";

export const App = component$(() => {
  const signal = useSignal(0);
  const store = useStore({});
  return (
    <Cmp
      staticText="text"
      staticText2={`text`}
      staticNumber={1}
      staticBoolean={true}
      staticExpr={`text${12}`}
      staticExpr2={typeof `text${12}` === "string" ? 12 : 43}
      signal={signal}
      signalValue={signal.value}
      signalComputedValue={12 + signal.value}
      store={store.address.city.name}
      storeComputed={store.address.city.name ? "true" : "false"}
      dep={dep}
      depAccess={dep.thing}
      depComputed={dep.thing + "stuff"}
      global={globalThing}
      globalAccess={globalThing.thing}
      globalComputed={globalThing.thing + "stuff"}
      noInline={signal.value()}
      noInline2={signal.value + unknown()}
      noInline3={mutable(signal)}
      noInline4={signal.value + dep}
    />
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { mutable } from "@qwik.dev/core";
import { dep } from "./file";
import { Cmp } from "./cmp";
const _hf0 = (p0) => 12 + p0.value;
const _hf0_str = "12+p0.value";
const _hf1 = (p0) => p0.address.city.name;
const _hf1_str = "p0.address.city.name";
const _hf2 = (p0) => p0.address.city.name ? "true" : "false";
const _hf2_str = "p0.address.city.name?\"true\":\"false\"";
const _hf3 = (p0) => p0.value + dep;
const _hf3_str = "p0.value+dep";
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ inlinedQrl(() => {
	const signal = useSignal(0);
	const store = useStore({});
	return /* @__PURE__ */ _jsxSorted(Cmp, {
		signal,
		dep,
		depAccess: dep.thing,
		depComputed: dep.thing + "stuff",
		global: globalThing,
		globalAccess: globalThing.thing,
		globalComputed: globalThing.thing + "stuff",
		noInline: signal.value(),
		noInline2: signal.value + unknown(),
		noInline3: mutable(signal)
	}, {
		staticText: "text",
		staticText2: `text`,
		staticNumber: 1,
		staticBoolean: true,
		staticExpr: `text${12}`,
		staticExpr2: typeof `text${12}` === "string" ? 12 : 43,
		signalValue: _wrapProp(signal),
		signalComputedValue: _fnSignal(_hf0, [signal], _hf0_str),
		store: _fnSignal(_hf1, [store], _hf1_str),
		storeComputed: _fnSignal(_hf2, [store], _hf2_str),
		noInline4: _fnSignal(_hf3, [signal], _hf3_str)
	}, null, 3, "u6_0");
}, "App_component_XumqEURaLxI"));
