crates/qwik-optimizer-oxc/tests/snapshots/example_derived_signals_multiple_children.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useStore } from "@qwik.dev/core";
import { mutable } from "@qwik.dev/core";
import { dep } from "./file";
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ inlinedQrl(() => {
	const signal = useSignal(0);
	const store = useStore({});
	return /* @__PURE__ */ _jsxSorted(_Fragment, null, null, [
		/* @__PURE__ */ _jsxSorted("div", null, null, "First text", 3, "u6_0"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", `text`], 1, "u6_1"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", 1], 1, "u6_2"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", true], 1, "u6_3"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", `text${12}`], 1, "u6_4"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", typeof `text${12}` === "string" ? 12 : 43], 1, "u6_5"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", signal], 1, "u6_6"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", _wrapProp(signal)], 1, "u6_7"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", 12 + signal.value], 1, "u6_8"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", store.address.city.name], 1, "u6_9"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", store.address.city.name ? "true" : "false"], 1, "u6_10"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", dep], 1, "u6_11"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", dep.thing], 1, "u6_12"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", dep.thing + "stuff"], 1, "u6_13"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", globalThing], 1, "u6_14"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", globalThing.thing], 1, "u6_15"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", globalThing.thing + "stuff"], 1, "u6_16"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", signal.value()], 1, "u6_17"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", signal.value + unknown()], 1, "u6_18"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", mutable(signal)], 1, "u6_19"),
		/* @__PURE__ */ _jsxSorted("div", null, null, ["First", signal.value + dep], 1, "u6_20")
	], 1, "u6_21");
}, "App_component_XumqEURaLxI"));
