crates/qwik-optimizer-oxc/tests/snapshots/example_dev_mode.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_XumqEURaLxI = () => import("./test.tsx_App_component_XumqEURaLxI");
const i_0VoFXPYUR5E = () => import("./test.tsx_App_component_p_q_e_click_0VoFXPYUR5E");
import { component$, useStore } from "@qwik.dev/core";
export const App = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"));

=== test.tsx_App_component_XumqEURaLxI.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_0VoFXPYUR5E = () => import("./test.tsx_App_component_p_q_e_click_0VoFXPYUR5E");
import { _jsxSorted } from "@qwik.dev/core";
export const App_component_XumqEURaLxI = () => {
	return /* @__PURE__ */ _jsxSorted(Cmp, null, null, /* @__PURE__ */ _jsxSorted("p", null, {
		class: "stuff",
		"q-e:click": () => console.log("warn")
	}, "Hello Qwik", 3, "u6_0"), 3, "u6_1");
};

=== test.tsx_App_component_p_q_e_click_0VoFXPYUR5E.js === (ENTRY)
