crates/qwik-optimizer-oxc/tests/snapshots/example_dev_mode_inlined.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useStore } from "@qwik.dev/core";

export const App = component$(() => {
  return (
    <Cmp>
      <p class="stuff" onClick$={() => console.log("warn")}>
        Hello Qwik
      </p>
    </Cmp>
  );
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ inlinedQrl(() => {
    return /* @__PURE__ */ _jsxSorted(
      Cmp,
      null,
      null,
      /* @__PURE__ */ _jsxSorted(
        "p",
        null,
        {
          class: "stuff",
          "q-e:click": /* @__PURE__ */ inlinedQrl(
            () => console.log("warn"),
            "App_component_p_q_e_click_0VoFXPYUR5E",
          ),
        },
        "Hello Qwik",
        3,
        "u6_0",
      ),
      3,
      "u6_1",
    );
  }, "App_component_XumqEURaLxI"),
);

=== DIAGNOSTICS ===

[]
