crates/qwik-optimizer-oxc/tests/snapshots/example_drop_side_effects.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$ } from "@qwik.dev/core";
import { server$ } from "@qwik.dev/router";
import { clientSupabase } from "supabase";
import { Client } from "openai";
import { secret } from "./secret";
import { sideEffect } from "./secret";

const supabase = clientSupabase();
const dfd = new Client(secret);

(function () {
  console.log("run");
})();
(() => {
  console.log("run");
})();

sideEffect();

export const api = server$(() => {
  supabase.from("ffg").do(dfd);
});

export default component$(() => {
  return <button onClick$={async () => await api()}></button>;
});

=== test.js ===
import { serverQrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
const i_jN9ZUuuADmk = () => import("./test.tsx_default_component_jN9ZUuuADmk");
const i_zo9wkw0NBzs = () => import("./test.tsx_default_component_button_q_e_click_zo9wkw0NBzs");
import { clientSupabase } from "supabase";
import { Client } from "openai";
import { secret } from "./secret";
import { sideEffect } from "./secret";
const supabase = clientSupabase();
const dfd = new Client(secret);
(function () {
  console.log("run");
})();
(() => {
  console.log("run");
})();
sideEffect();
export const api = serverQrl(/* @__PURE__ */ _noopQrl("api_server_qbklcEGqqcY"));
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_jN9ZUuuADmk, "default_component_jN9ZUuuADmk"),
);

=== test.tsx_default_component_jN9ZUuuADmk.js === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_zo9wkw0NBzs = () => import("./test.tsx_default_component_button_q_e_click_zo9wkw0NBzs");
import { _jsxSorted } from "@qwik.dev/core";
import { api } from "./test";
export const default_component_jN9ZUuuADmk = () => {
  return /* @__PURE__ */ _jsxSorted(
    "button",
    null,
    {
      "q-e:click": /* @__PURE__ */ qrl(
        i_zo9wkw0NBzs,
        "default_component_button_q_e_click_zo9wkw0NBzs",
      ),
    },
    null,
    3,
    "u6_0",
  );
};

/*
{
  "origin": "test.tsx",
  "name": "default_component_jN9ZUuuADmk",
  "entry": null,
  "displayName": "test.tsx_default_component",
  "hash": "jN9ZUuuADmk",
  "canonicalFilename": "test.tsx_default_component_jN9ZUuuADmk",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_default_component_button_q_e_click_zo9wkw0NBzs.js === (ENTRY)
import { api } from "./test";
export const default_component_button_q_e_click_zo9wkw0NBzs = async () => await api();

/*
{
  "origin": "test.tsx",
  "name": "default_component_button_q_e_click_zo9wkw0NBzs",
  "entry": null,
  "displayName": "test.tsx_default_component_button_q_e_click",
  "hash": "zo9wkw0NBzs",
  "canonicalFilename": "test.tsx_default_component_button_q_e_click_zo9wkw0NBzs",
  "path": "",
  "extension": "js",
  "parent": "test.tsx_default_component",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false
}
*/
