crates/qwik-optimizer-oxc/tests/snapshots/example_explicit_ext_no_transpile.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, $, useStyles$ } from "@qwik.dev/core";

export const App = component$((props) => {
  useStyles$("hola");
  return $(() => <div></div>);
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XumqEURaLxI = () => import("./test.tsx_App_component_XumqEURaLxI.tsx");
const i_IUcvUpNH0v8 = () => import("./test.tsx_App_useStyles_IUcvUpNH0v8.tsx");
const i_w3unmdi0sm4 = () => import("./test.tsx_App_w3unmdi0sm4.tsx");
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XumqEURaLxI, "App_component_XumqEURaLxI"),
);

=== test.tsx_App_component_XumqEURaLxI.tsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_IUcvUpNH0v8 = () => import("./test.tsx_App_useStyles_IUcvUpNH0v8.tsx");
const i_w3unmdi0sm4 = () => import("./test.tsx_App_w3unmdi0sm4.tsx");
import { useStylesQrl } from "@qwik.dev/core";
export const App_component_XumqEURaLxI = (props) => {
  useStylesQrl(/* @__PURE__ */ qrl(i_IUcvUpNH0v8, "App_useStyles_IUcvUpNH0v8"));
  return /* @__PURE__ */ qrl(i_w3unmdi0sm4, "App_w3unmdi0sm4");
};

/*
{
  "origin": "test.tsx",
  "name": "App_component_XumqEURaLxI",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "XumqEURaLxI",
  "canonicalFilename": "test.tsx_App_component_XumqEURaLxI",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_App_useStyles_IUcvUpNH0v8.tsx === (ENTRY)
export const App_useStyles_IUcvUpNH0v8 = "hola";

/*
{
  "origin": "test.tsx",
  "name": "App_useStyles_IUcvUpNH0v8",
  "entry": null,
  "displayName": "test.tsx_App_useStyles",
  "hash": "IUcvUpNH0v8",
  "canonicalFilename": "test.tsx_App_useStyles_IUcvUpNH0v8",
  "path": "",
  "extension": "tsx",
  "parent": "test.tsx_App_component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false
}
*/

=== test.tsx_App_w3unmdi0sm4.tsx === (ENTRY)
export const App_w3unmdi0sm4 = () => <div></div>;

/*
{
  "origin": "test.tsx",
  "name": "App_w3unmdi0sm4",
  "entry": null,
  "displayName": "test.tsx_App",
  "hash": "w3unmdi0sm4",
  "canonicalFilename": "test.tsx_App_w3unmdi0sm4",
  "path": "",
  "extension": "tsx",
  "parent": "test.tsx_App_component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/
